--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,17 @@
         android:theme="@style/Theme.TiroMosca"
         tools:targetApi="31">
         <activity
+            android:name=".RedefirSenha"
+            android:exported="false" />
+        <activity
             android:name=".ListaUsuariosActivity"
             android:exported="false" />
         <activity
             android:name=".PraticarActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".CadastroActivity"
             android:exported="false" />
