--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,22 +16,25 @@
         android:theme="@style/Theme.TiroMosca"
         tools:targetApi="31">
         <activity
-            android:name=".RedefirSenha"
+            android:name=".activity.GamerOverActivity"
             android:exported="false" />
         <activity
-            android:name=".ListaUsuariosActivity"
+            android:name=".activity.RedefirSenha"
             android:exported="false" />
         <activity
-            android:name=".PraticarActivity"
+            android:name=".activity.ListaUsuariosActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".activity.PraticarActivity"
             android:exported="false" />
         <activity
-            android:name=".CadastroActivity"
+            android:name=".activity.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.CadastroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
